1.17_12:16
  File "auto_return_text.py", line 25
    elif(wwxd2 in message.content):
       ^
SyntaxError: invalid syntax
